Gelatin-making process more complicated
RenderIngredients now uses selectiveElements to cut down on files
Soulstorm brew integrated with Alchemy
Instead of simply 'cooking' certain liquids (such as sap > syrup or water > salt) , they are now actual simmer recipes 

1.6.5
Dehydrated fruits cure into the same amount of dried fruits (for real this time) - DONE!!!

1.6.4
Added Compote
Added Acorn "Coffee" & Roasted Acorns
Added Candied Fruit
Added herbal bread crumbs
Japanese translation updated (thanks to macoto_hino)
Vanilla & wildcraft wine/cider/spirits now have sat in meals
Handbook mentions you can get resin from acacia trees
Added item description to resin
You can no longer crack boiled/pickled eggs
Pickled or boiled eggs can be added to scrambled eggs
Charred syrup-covered fruit bread recipe fixed
Lard transition timer reduced from 1440 hours to 240
Peanuts now visible in meals
Yogurt reviewed - Mixing bowl outputs 0.1 L of liquid instead of 10 mL; made into ExpandedLiquid (has issues with meals but should be drinkable now); nutrition nerfed
Peanut butter & peanut sauce output corrected; peanut butter nutrition nerfed
Gelatin textures updated
Fast vinegar barrel recipe reworked; handbook updated
Alcohol text appears in meals
Log spam reduced
Wildcraft berries fixed in oven
Wildcraft gelatin recipes fixed
Brambleberry changed to blackberry
Birch and pine bread no longer has broken amounts of nutrition, kneading recipe requires 4 flour instead of 1

1.6.3
Added Breaded Mushrooms
Added Soulstorm Brew
Braziers/Superfuels recipes updated
PS meatnuggets have proper perish rates; charred meatnugget perish rate nerfed
Hard lard drops fixed
Breadcrumbs can be made in the grid, too (recipe was incomplete)
Aged meat looks right on meat hooks
Handbook mentions scrambled egg recipe change 
Cooking 104 tweaked for clarity
Boiled food added to handbook guide (whoops)
Salt in the handbook actually says it needs 10 L instead of 1 L
Patches are ALL server-side

1.6.2