@@ -30,6 +30,6 @@
       "resultCode": "expandedfoods:acorns-roasted"
     },
     "side": "server",
-    "file": "blocktypes/plant/mushroom.json"
+    "file": "acorns:itemtypes/resource/acorns-shelled.json"
   },
 ]
