@@ -7,6 +7,6 @@
   "modID": "expandedfoods",
   "authors": ["l33tmaan"],
 
-  "contributors": ["Korhaka, Ledyanaya Sonya, DoctorVanGogh, Jobediah Timberman, Vinter Nacht, Craluminum2413, Dr_Oldman, jakecool19, SpearAndFang, Mister_Andy_Dandy"],
+  "contributors": ["Korhaka", "Ledyanaya Sonya", "DoctorVanGogh", "Jobediah Timberman", "Vinter Nacht", "Craluminum2413", "Dr_Oldman", "jakecool19", "SpearAndFang", "Mister_Andy_Dandy"],
   "dependencies": {"aculinaryartillery": "1.0.0"}
 }
