@@ -34,6 +34,11 @@ Instead of simply 'cooking' certain liquids (such as sap > syrup or water > salt
 
 1.6.5
 Dehydrated fruits cure into the same amount of dried fruits (for real this time) - DONE!!!
+Fruit bread/muffin syrup textures reviewed (esp. lychee)
+Syrup fruit bread charred text fixed
+Soy milk recipe fixed
+Handbook mentions that 1 L of broth is needed for meals
+Non-vanilla fruit works in barrels
 
 1.6.4
 Added Compote
